--- a/Sources/Plasma/CoreLib/CMakeLists.txt
+++ b/Sources/Plasma/CoreLib/CMakeLists.txt
@@ -86,6 +86,7 @@ set(CoreLib_HEADERS
     hsScalar.h
     hsStlSortUtils.h
     hsSTLStream.h
+    hsStlUtils.h
     hsStream.h
     hsStringTokenizer.h
     hsTemplates.h
