Convert hsThread to a std::thread implementation

--- a/Sources/Plasma/CoreLib/CMakeLists.txt
+++ b/Sources/Plasma/CoreLib/CMakeLists.txt
@@ -26,6 +26,7 @@ set(CoreLib_SOURCES
     hsStream.cpp
     hsStringTokenizer.cpp
     hsTemplates.cpp
+    hsThread.cpp
     hsWide.cpp
     pcSmallRect.cpp
     plFileSystem.cpp
