pnAsyncCore[Exe] cleaning: 	move and rename pnAsyncCoreExe stuff into pnAsyncCore 	move Private/* to remove this folder 	change header style (remove error on multiple inclusion) 	move pnActhread.cpp and pnAcTimer.cpp to Nt 	remove Pch.h and pnAcAllIncludes.h; correct headers inclusions 	remove empty Unix folder 	change NtGetApi to GetApi and remove conditional use of this in pnAcCore.cpp 	added conditional subdirectories inclusion in CMakeLists.txt 	split pnAcIo.h into pnAcSocket.h and pnAcDns.h 	move 'AsyncCore not implemented' error  into CMakeLists.txt 	change Perf*Counter functions to use 'EAsyncPerfCounter' instand of 'unsigned'

--- a/Sources/Plasma/NucleusLib/pnAsyncCore/CMakeLists.txt
+++ b/Sources/Plasma/NucleusLib/pnAsyncCore/CMakeLists.txt
@@ -2,22 +2,50 @@ include_directories(../../CoreLib)
 include_directories(../../NucleusLib)
 include_directories(../../PubUtilLib)
 
+set(pnAsyncCore_SOURCES
+    pnAcCore.cpp
+    pnAcIo.cpp
+    pnAcLog.cpp
+)
+
 set(pnAsyncCore_HEADERS
-    Pch.h
     pnAsyncCore.h
+    pnAcCore.h
+    pnAcSocket.h
+    pnAcLog.h
+    pnAcSocket.h
+    pnAcThread.h
+    pnAcTimer.h
 )
 
 set(pnAsyncCore_PRIVATE
-    Private/pnAcAllIncludes.h
-    Private/pnAcCore.h
-    Private/pnAcIo.h
-    Private/pnAcLog.cpp
-    Private/pnAcLog.h
-    Private/pnAcThread.h
-    Private/pnAcTimer.h
+    pnAcInt.h
 )
 
-add_library(pnAsyncCore STATIC ${pnAsyncCore_PRIVATE} ${pnAsyncCore_HEADERS})
+set(pnAysncCore_NT
+    Nt/pnAcNt.cpp
+    Nt/pnAcNtInt.h
+    Nt/pnAcNtSocket.cpp
+    Nt/pnAcNtThread.cpp
+    Nt/pnAcNtTimer.cpp
+)
 
+set(pnAsyncCore_WIN32
+    Win32/pnAcW32Dns.cpp
+    Win32/pnAcW32Thread.cpp
+)
+
+if (WIN32)
+    add_library(pnAsyncCore STATIC
+            ${pnAsyncCore_PRIVATE} ${pnAsyncCore_HEADERS}
+            ${pnAsyncCore_SOURCES} ${pnAysncCore_NT}
+            ${pnAsyncCore_WIN32})
+else ()
+    message("NucleusLib/pnAsyncCore not implemented for this platform!")
+endif ()
+
+source_group("Source Files" FILES ${pnAsyncCore_SOURCES})
 source_group("Header Files" FILES ${pnAsyncCore_HEADERS})
 source_group("Private" FILES ${pnAsyncCore_PRIVATE})
+source_group("Nt" FILES ${pnAysncCore_NT})
+source_group("Win32" FILES ${pnAsyncCore_WIN32})
